2008-06-11  Zoltan Varga  <vargaz@gmail.com>

	* assembly.c (mono_assembly_load_from_full): Call 
	mono_assembly_load_friends () outside the assemblies lock, since it can
	acquire the loader lock. Fixes #323696.

	* reflection.c (resolve_object): Inflate the inst with the context for
	FieldOnTypeBuilderInst. Fixes #399010.

2008-06-10 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (mono_image_get_field_on_inst_token): Don't
	inflate the field to encode it's signature. If it's a
	VAR or MVAR it should stay that way in the signature.
	Fixes #399047.

2008-06-10 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (resolve_object): Release memory of inflated types.

2008-06-10 Rodrigo Kumpera  <rkumpera@novell.com>

	* loader.c (mono_method_get_signature_full): Remove assert about
	loading a methodspec to a generic method. We have such methods, such as
	System.Threading.Interlocked::CompareExchange<T>.
	This assert was removed since it crashes the verifier when it checks
	methods calling CompareExchange<T>.

2008-06-10  Marek Safar  <marek.safar@gmail.com>

	* icall.c (ves_icall_MonoMethod_GetGenericArguments): Creates an instance
	of Type array and not MonoType.

2008-06-10  Marek Habersack  <mhabersack@novell.com>

	* profiler.c: fix a segfault on shutdown. Patch from Paolo Molaro
	<lupus@ximian.com>

2008-06-10  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h
	(MONO_SYMBOL_FILE_MINOR_VERSION): Bump to 6.  There were no
	changes to the file format, but we were generating incorrect
	source file indices in the line number table due to a bug, which
	made backtraces report an incorrect source file.

2008-06-10 Rodrigo Kumpera  <rkumpera@novell.com>

	* mono-debug.c: Moved mono_debug_free_method_jit_info from
	mini/debug-mini.c to here.

	* mono-debug.c (il_offset_from_address): Free memory from find_method.

	* mono-debug.h: Export mono_debug_free_method_jit_info, users should
	use it to release structs returned by mono_debug_find_method.
