@@ -333,13 +333,32 @@ mono_loader_error_prepare_exception (MonoLoaderError *error)
 	return ex;
 }
 
+/*
+ * If @field belongs to an inflated generic class, return the corresponding field of the
+ * generic type definition class.
+ */
+static MonoClassField*
+mono_metadata_get_corresponding_field_from_generic_type_definition (MonoClassField *field)
+{
+	MonoClass *gtd;
+	int offset;
+
+	if (!field->parent->generic_class)
+		return field;
+
+	gtd = field->parent->generic_class->container_class;
+	offset = field - field->parent->fields;
+	return gtd->fields + offset;
+}
+
 static MonoClassField*
 field_from_memberref (MonoImage *image, guint32 token, MonoClass **retklass,
 		      MonoGenericContext *context)
 {
 	MonoClass *klass;
-	MonoClassField *field;
+	MonoClassField *field, *sig_field = NULL;
 	MonoTableInfo *tables = image->tables;
+	MonoType *sig_type;
 	guint32 cols[6];
 	guint32 nindex, class;
 	const char *fname;
@@ -356,6 +375,12 @@ field_from_memberref (MonoImage *image, guint32 token, MonoClass **retklass,
 	mono_metadata_decode_blob_size (ptr, &ptr);
 	/* we may want to check the signature here... */
 
+	if (*ptr++ != 0x6) {
+		mono_loader_set_error_bad_image (g_strdup_printf ("Bad field signature class token %08x field name %s token %08x", class, fname, token));
+		return NULL;
+	}
+	sig_type = mono_metadata_parse_type (image, MONO_PARSE_TYPE, 0, ptr, &ptr);
+
 	switch (class) {
 	case MONO_MEMBERREF_PARENT_TYPEDEF:
 		klass = mono_class_get (image, MONO_TOKEN_TYPE_DEF | nindex);
@@ -369,7 +394,7 @@ field_from_memberref (MonoImage *image, guint32 token, MonoClass **retklass,
 		mono_class_init (klass);
 		if (retklass)
 			*retklass = klass;
-		field = mono_class_get_field_from_name (klass, fname);
+		sig_field = field = mono_class_get_field_from_name (klass, fname);
 		break;
 	case MONO_MEMBERREF_PARENT_TYPEREF:
 		klass = mono_class_from_typeref (image, MONO_TOKEN_TYPE_REF | nindex);
@@ -383,28 +408,16 @@ field_from_memberref (MonoImage *image, guint32 token, MonoClass **retklass,
 		mono_class_init (klass);
 		if (retklass)
 			*retklass = klass;
-		field = mono_class_get_field_from_name (klass, fname);
+		sig_field = field = mono_class_get_field_from_name (klass, fname);
 		break;
 	case MONO_MEMBERREF_PARENT_TYPESPEC: {
-		/*guint32 bcols [MONO_TYPESPEC_SIZE];
-		guint32 len;
-		MonoType *type;
-
-		mono_metadata_decode_row (&tables [MONO_TABLE_TYPESPEC], nindex - 1, 
-					  bcols, MONO_TYPESPEC_SIZE);
-		ptr = mono_metadata_blob_heap (image, bcols [MONO_TYPESPEC_SIGNATURE]);
-		len = mono_metadata_decode_value (ptr, &ptr);	
-		type = mono_metadata_parse_type (image, MONO_PARSE_TYPE, 0, ptr, &ptr);
-
-		klass = mono_class_from_mono_type (type);
-		mono_class_init (klass);
-		g_print ("type in sig: %s\n", klass->name);*/
 		klass = mono_class_get_full (image, MONO_TOKEN_TYPE_SPEC | nindex, context);
 		//FIXME can't klass be null?
 		mono_class_init (klass);
 		if (retklass)
 			*retklass = klass;
 		field = mono_class_get_field_from_name (klass, fname);
+		sig_field = mono_metadata_get_corresponding_field_from_generic_type_definition (field);
 		break;
 	}
 	default:
@@ -414,6 +427,10 @@ field_from_memberref (MonoImage *image, guint32 token, MonoClass **retklass,
 
 	if (!field)
 		mono_loader_set_error_field_load (klass, fname);
+	else if (sig_field && !mono_metadata_type_equal_full (sig_type, sig_field->type, TRUE)) {
+		mono_loader_set_error_field_load (klass, fname);
+		return NULL;
+	}
 
 	return field;
 }
